syntax = "proto3";
package ie.gmit.ds;


service PasswordService
{
	rpc hash(UserLoginRequest) returns (UserLoginResponse);
	rpc validate(ConfirmPasswordRequest) returns (ConfirmPasswordResponse); 
}

message UserLoginRequest
{
	int32 userId = 1;
	string password = 2;
	
}

message UserLoginResponse
{
	int32 userId = 1;
	int32 hashedPassword = 2;
	int32 salt = 3;
}

message ConfirmPasswordRequest
{
	string password = 1;
	int32 hashedPassword = 2;
	int32 salt = 3;
}

message ConfirmPasswordResponse
{
	bool validPassword = 1;
}




